[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game/Datapacks/UI/PackVarUIs/StatSingleVarUI.gd" type="Script" id=1]
[ext_resource path="res://GlobalTheme.tres" type="Theme" id=2]

[node name="StatSingleVarUI" type="HBoxContainer"]
margin_right = 1280.0
margin_bottom = 20.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_top = -1.0
margin_right = 100.0
margin_bottom = 24.4
rect_min_size = Vector2( 100, 0 )
text = "Strength"
clip_text = true

[node name="Minus5Button" type="Button" parent="."]
margin_left = 103.0
margin_right = 121.0
margin_bottom = 25.0
text = "-5"

[node name="MinusButton" type="Button" parent="."]
margin_left = 124.0
margin_right = 142.0
margin_bottom = 25.0
text = "-1"

[node name="Label2" type="Label" parent="."]
margin_left = 145.0
margin_top = -1.0
margin_right = 185.0
margin_bottom = 24.4
rect_min_size = Vector2( 40, 0 )
text = "10"
align = 1

[node name="PlusButton" type="Button" parent="."]
margin_left = 188.0
margin_right = 210.0
margin_bottom = 25.0
text = "+1"

[node name="Plus5Button" type="Button" parent="."]
margin_left = 213.0
margin_right = 235.0
margin_bottom = 25.0
text = "+5"

[connection signal="pressed" from="Minus5Button" to="." method="_on_Minus5Button_pressed"]
[connection signal="pressed" from="MinusButton" to="." method="_on_MinusButton_pressed"]
[connection signal="pressed" from="PlusButton" to="." method="_on_PlusButton_pressed"]
[connection signal="pressed" from="Plus5Button" to="." method="_on_Plus5Button_pressed"]
